WIP issueChatting overflow scroll

--- a/src/components/admin/issue/ChattingList.module.scss
+++ b/src/components/admin/issue/ChattingList.module.scss
@@ -1,6 +1,10 @@
 .chatListContainer{
   width: 50%;
+  min-height: 800px;
   border-right: 1px solid rgba(80, 80, 80, 0.24);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 
   .tableInteraction{
     display: flex;
@@ -16,7 +20,7 @@
     flex-direction: row;
     width: 20%;
     margin: 0 auto;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     line-height: 24px;
   }
