--- a/src/components/admin/issue/IssueTable.module.scss
+++ b/src/components/admin/issue/IssueTable.module.scss
@@ -4,7 +4,7 @@ $table-width: 1580px;
 .tableSection{
   margin: 20px auto 50px;
   width: $table-width;
-  min-height: 500px;
+  min-height: 800px;
   padding: 20px 10px;
   border-radius: 20px;
   font-family: $font-pretendard;
